--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.14",
     "lucide-react": "^0.407.0",
+    "mui-chips-input": "^2.1.5",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "recoil": "^0.7.7",
     "swiper": "^11.1.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
