--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/accordion": "^2.0.38",
+    "@nextui-org/react": "^2.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
@@ -17,6 +19,7 @@
     "mui-chips-input": "^2.1.5",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "nextui-cli": "^0.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
