--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@nextui-org/accordion": "^2.0.38",
     "@nextui-org/react": "^2.4.6",
     "class-variance-authority": "^0.7.0",
